custom scrollbar styles fixed, selection styles

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -14,6 +14,28 @@ html {
   box-sizing: inherit;
 }
 
+::selection {
+  background: $second-accent;
+  text-shadow: none;
+}
+
+// custom scrollbar
+* {
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
+    background-color: #000;
+  }
+
+  &::-webkit-scrollbar {
+    height: 8px;
+    background-color: #000000;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $second-accent;
+  }
+}
+
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
@@ -92,7 +114,7 @@ button {
   overflow: auto;
   width: 100%;
   align-items: center;
-  height: 50px;
+  height: 40px;
 }
 
 .display {
@@ -101,20 +123,6 @@ button {
   font-size: 6rem;
   font-weight: 300;
   overflow: auto;
-
-  &::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
-    background-color: #000;
-  }
-
-  &::-webkit-scrollbar {
-    height: 8px;
-    background-color: #000000;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: $second-accent;
-  }
 }
 
 .buttons {
